dev/style.css
/****** RESET ******/

*,
*::before,
*::after {
    box-sizing: border-box;
}

body,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
ul,
ol,
li,
figure,
figcaption,
hr {
    margin: 0;
    padding: 0;
}

ul,
ol {
    list-style: none;
}

/****** VARIABLES ******/

:root {
    /** COLORS **/
    --light-cream: #FFF8DE;
    --secondary-cream: #FFF2C6;
    --light-blue: #AAC4F5;
    --secondary-blue: #8CA9FF;

    /** BURGER MENU **/
    --burger-anim-duration: 0.3s;
}

/****** GENERAL STYLE ******/

html {
    scroll-behavior: smooth;
}

a {
    text-decoration: none;
    transition: 0.3s;
}

h1,
h2 {
    font-size: clamp(2rem, 5vw + 1rem, 2.5rem);
}

h2 {
    color: var(--light-blue);
    text-align: center;
    font-family: 'Brygada 1918', serif;
}

img {
    width: 100%;
    height: auto;
    display: block;
}

a,
button,
#burger-container,
.nav-links li a {
    -webkit-tap-highlight-color: transparent;
}

/****** LAYOUT ******/

body {
    background-color: var(--light-cream);
    font-family: 'PT Serif', serif;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

.menu-open {
    overflow: hidden;
}

header,
#hero,
#products,
#product-content,
#aboutUsWrapper,
#contact,
footer {
    padding-inline: 1.5rem;
}

header>div,
footer {
    padding-block: 1rem;
}

header,
footer {
    background-color: var(--secondary-cream);
}


header {
    position: sticky;
    top: 0;
    z-index: 1000;
    display: flex;
    justify-content: space-evenly;
    align-content: center;
    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
}

header,
.nav-links {
    gap: 2.5rem;
}

nav {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
}

nav a {
    color: var(--light-blue);
}

#title {
    width: 12.5rem;
    height: auto;
    /* To keep proportions */
    display: block;
    /* To avoid space below the image */
}

.nav-links {
    display: flex;
    font-size: 1.2rem;
    padding-top: 0.3125rem;
    align-items: center;
}

#burger-container {
    display: none;
}

#socialMediaHeader {
    display: flex;
    gap: 1.5rem;
    width: 8rem;
}

main {
    display: flex;
    flex-direction: column;
    flex: 1;
}

section {
    scroll-margin-top: 5rem;
}

#hero,
#products,
#product-content,
#aboutUs,
#contact {
    padding-block: 2rem;
}

footer {
    text-align: center;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1rem;
}

footer section {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    gap: 1rem 3rem;
}

/****** COMPONENTS ******/

.product-cards {
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.product-cards img {
    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
    /* #5 */
    transition: 0.1s;
}

.product-info {
    display: flex;
    align-items: center;
    gap: 0.5rem;
    flex-wrap: wrap;
}

.product-info h3 {
    flex-grow: 1;
}

.product-info p {
    font-size: 1.7rem;
}

.product-info div {
    flex-basis: 100%;
    min-width: 13rem;
    display: flex;
    align-items: center;
    gap: 0.5rem;
}

.buttons {
    flex: 1;
    display: flex;
    justify-content: center;
    align-items: center;
    text-decoration: none;
    color: var(--secondary-blue);
    border: 1px solid var(--light-blue);
    padding: 0.2rem 0;
    text-align: center;
}

/****** SPECIFIC: INDEX.HTML ******/

#hero {
    background-image: linear-gradient(to bottom, rgba(255, 242, 198, 0.7), rgba(254, 247, 221, 1)), url('images/hero.png');
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    height: 600px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
    gap: 2rem;
}

#hero h2 {
    font-size: clamp(1.8rem, 3.8vw + 1rem, 5rem);
}

#hero div {
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
}

#hero p {
    font-style: italic;
    font-size: 1.2rem;
    color: var(--secondary-blue);
}

#products {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 2rem;
}

#aboutUsWrapper {
    background-color: white;
    padding-block: 5rem;
}

#aboutUs {
    display: grid;
    grid-template-columns: 2fr 1fr;
    align-items: center;
    gap: 2rem;
    max-width: 80rem;
    margin: auto;
    padding-block: 2rem;
}

#aboutUs img {
    max-width: 20rem;
    justify-self: center;
    align-self: center;
}

#auDescription {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    justify-content: center;
}

#contact {
    display: flex;
    flex-direction: column;
    gap: 2rem;
    text-align: center;
}

#contact h3,
.information h4 {
    font-size: 1.5rem;
}

.contact-cards {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    gap: 1rem;
}

.shops {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    width: clamp(30rem, 40rem, 100%);
}

.map-containers {
    grid-column: 1 / 3;
    min-height: 300px;
}

iframe {
    width: 100%;
    height: 100%;
    border-radius: 1rem;
}

.information {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 0.5rem;
    font-size: 1.1rem;
}

.information a,
footer a {
    color: var(--secondary-blue);
}

.horarios {
    display: grid;
    grid-template-columns: 1fr 1fr;
    justify-items: center;
    gap: 0.5rem 1rem;
}

#whatsapp {
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

#whatsapp a {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 1rem;
    font-size: 1.7rem;
    color: #4cb550;
}

#whatsapp img {
    max-width: 2.5rem;
}

/****** SPECIFIC: PRODUCT PAGES ******/

#product-content {
    max-width: 80rem;
    margin: 0 auto;
    gap: 2rem;
}

#detailedProduct {
    display: grid;
    grid-template-columns: 1fr 1fr;
    align-items: center;
    gap: 1rem clamp(1rem, 2.5vw, 2rem);
}
/* ... */

